--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
             android:name=".AuthnkeyCredentialService"
             android:enabled="true"
             android:exported="true"
-            android:label="Security Key"
+            android:label="@string/app_name"
             android:permission="android.permission.BIND_CREDENTIAL_PROVIDER_SERVICE">
             <intent-filter>
                 <action android:name="android.service.credentials.CredentialProviderService" />
